--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,12 @@ glium = "0.31.0"
 imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
 imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
 imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
+rand = "0.8.5"
+
+[dev-dependencies]
+bencher = "0.1.5"
+
+[[bench]]
+name = "sierpinski2"
+path = "benches/sierpinski2.rs"
+harness = false
