--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ glium = "0.31.0"
 imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
 imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
 imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
+ndarray = "0.15.4"
 rand = "0.8.5"
+
 
 [dev-dependencies]
 bencher = "0.1.5"
