--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
 imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
 imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
 ndarray = "0.15.4"
+once_cell = "1.13"
 rand = "0.8.5"
+regex = "1"
 
 
 [dev-dependencies]
