--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glium = "0.31.0"
-imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
-imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
-imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
+glium = "0.32.1"
+imgui = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
+imgui-glium-renderer = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
+imgui-winit-support = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
 ndarray = "0.15.4"
 once_cell = "1.13"
 rand = "0.8.5"
 regex = "1"
-
 
 [dev-dependencies]
 bencher = "0.1.5"
