--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ once_cell = "1.13"
 rand = "0.8.5"
 regex = "1"
 
+[patch.crates-io]
+glium = { path = "../../repos/glium" }
+
 [dev-dependencies]
 bencher = "0.1.5"
 
