--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4"
+clap = { version = "4", features = ["derive"] }
 hdrhistogram = "7.5.2"
 glium = { version = "0.32.1", path = "../../repos/glium" }
 imgui = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
@@ -16,6 +16,7 @@ ndarray = "0.15"
 once_cell = "1.13"
 rand = "0.8"
 regex = "1"
+strum_macros = "0.24"
 ouroboros = "0.15"
 
 [patch.crates-io]
