--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ ndarray = "0.15"
 once_cell = "1.13"
 rand = "0.8"
 regex = "1"
+static_assertions = "1"
 strum_macros = "0.24"
 ouroboros = "0.15"
 
