--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitvec = "1"
 clap = { version = "4", features = ["derive"] }
 hdrhistogram = "7.5.2"
 glium = { version = "0.32.1", path = "../../repos/glium" }
