--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1"
 rand = "0.8"
 regex = "1"
 static_assertions = "1"
+strum = { version = "0.24", features = ["derive"] }
 strum_macros = "0.24"
 ouroboros = "0.15"
 
