--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ license = "MIT"
 bitvec = "1"
 clap = { version = "4", features = ["derive"] }
 hdrhistogram = "7"
+game-of-life-parsers = "2.0.1"
 glium = { git = "https://github.com/introtochaosbook/glium.git", version = "0.32.1", branch = "cpl/read" }
 imgui = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
 imgui-glium-renderer = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
 imgui-winit-support = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
+lexicon = "0.1.2"
 ndarray = "0.15"
 once_cell = "1"
 rand = "0.8"
